--- a/semestergpa.html
+++ b/semestergpa.html
@@ -59,7 +59,7 @@
                 <div class="row g-2 align-items-end">
                     <div class="col-5">
                         <p class="boldinTable">Credit Hours</p>
-                        <input type="number" class="inputclass course-credits" min="1" placeholder="3">
+                        <input type="number" class="inputclass course-credits" min="1">
                     </div>
                     <div class="col-5">
                         <p class="boldinTable">Grade</p>
